--- a/StringUtilsTest/pom.xml
+++ b/StringUtilsTest/pom.xml
@@ -38,6 +38,12 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
