--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,4 @@ tags
 [._]*.un~
 
 # End of https://www.toptal.com/developers/gitignore/api/c,python,java,macos,vim,intellij+all,maven
+cdg-web/cdg-web.iml
